[tool.poetry]
name = "rsk-site"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Flask-Login = "^0.5.0"
Flask-SQLAlchemy = "^2.5.1"
tensorflow = "^2.5.0"
pandas = "^1.3.0"
python-ntlm = "^1.1.0"
Brotli = "^1.0.9"
cryptography = "^3.4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
